--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 <body>
     <div>
         <h1>Login</h1>
-        <input type="text" id="Login" placeholder="Nome"
+        <input type="text" id="Login" placeholder="Nome">
+        <br>
+        <br>
+        <input type="password" id="Senha" placeholder="Senha"
     </div>
 </body>
 </html>
