--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
         <input type="text" id="Login" placeholder="Nome">
         <br>
         <br>
-        <input type="password" id="Senha" placeholder="Senha"
+        <input type="password" id="Senha" placeholder="Senha">
+        <br>
+        <br>
+        <button id="enviar">Enviar</button>
     </div>
 </body>
 </html>
